# coffee-delivery-api

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
src/: lib.rs  main.rs  models.rs  state.rs
src/auth/: jwt_auth.rs
src/config/db/: connection_db.rs  mod.rs  schema.rs
src/config/db/migrations/2023-06-05-234240_create_table_coffees/: down.sql  up.sql
src/config/db/migrations/2023-06-15-230324_create_table_users/: up.sql
src/config/db/migrations/2023-06-17-030548_create_table_orders/: up.sql
src/config/db/migrations/2023-06-17-031923_create_table_order_items/: down.sql  up.sql
src/config/db/migrations/2023-06-17-032844_add_field_price_on_table_coffees/: down.sql  up.sql
src/controllers/: coffee_controller.rs  mod.rs
src/deserializers/: coffee_deserializer.rs  mod.rs  order_deserializer.rs  user_deserializer.rs
src/handlers/: auth_handler.rs  coffee_handler.rs  mod.rs  order_handler.rs  user_handler.rs
src/models/: coffee.rs  mod.rs  order.rs  order_item.rs  user.rs
