[package]
name = "coffee-delivery-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
diesel = { version = "2.1.0", features = ["sqlite"]}
futures = "0.3.28"
uuid = { version = "1.3.4", features = ["v4"]}